Import stats page from Rails version.